# MailingManagementService

./: .env.sample  pyproject.toml
blogs/: admin.py  forms.py  models.py  services.py  urls.py  views.py
blogs/migrations/: 0001_initial.py
blogs/templates/blogs/: blog_confirm_delete.html  blog_detail.html  blog_form.html  blog_list.html
blogs/templatetags/: my_tags.py
clients/: admin.py  forms.py  models.py  urls.py  views.py
clients/migrations/: 0001_initial.py
clients/templates/clients/: client_confirm_delete.html  client_detail.html  client_list.html
config/: settings.py  urls.py
fixtures/: groups.json  users.json
mailings/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
mailings/management/commands/: start_mail.py
mailings/migrations/: 0001_initial.py  0002_alter_mailingparameters_end_date.py  0003_alter_mailingparameters_options_and_more.py  0004_alter_mailingparameters_end_date.py
mailings/templates/mailings/: base.html  index.html  logs_list.html  mailingparameters_confirm_delete.html  mailingparameters_detail.html  mailingparameters_list.html  message_confirm_delete.html  message_form.html  message_list.html
mailings/templates/mailings/includes/: inc_mailing_menu.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
users/templates/users/: login.html  password_recovery_form.html  password_recovery_message.html  register.html  register_message.html  user_form.html  user_list.html
